--- a/package.json
+++ b/package.json
@@ -4,16 +4,43 @@
   "description": "lint-commit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "lint-staged",
+    "lint:file": "node ./build/ban/index.js && npm run lint",
+    "#precommit": "npm run lint:file"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/luyi10year/lint-commit.git"
+  },
+  "#husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:file"
+    }
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/luyi10year/lint-commit/issues"
   },
-  "homepage": "https://github.com/luyi10year/lint-commit#readme"
+  "homepage": "https://github.com/luyi10year/lint-commit#readme",
+  "devDependencies": {
+    "babel-eslint": "^7.2.1",
+    "chalk": "^2.4.2",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-lean-imports": "^0.3.3",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-vue": "^2.0.1",
+    "fs": "0.0.1-security",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "path": "^0.12.7",
+    "stylelint": "^7.12.0",
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-processor-html": "^1.0.0"
+  }
 }
